--- a/index.html
+++ b/index.html
@@ -7,24 +7,35 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Fusion Dragon</title>
+    <title class="ui-page-title">Fusion Dragon</title>
 </head>
 <body>
     <header>
-        <ul id="nav" class="list-inline menucontainer">
-            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                <a href="index.html" class="hvr-sweep-to-right"><i  aria-hidden="true"></i><span>Home</span></a>
-            </li>
-            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                <a href="about.html" class="hvr-sweep-to-right"><i  aria-hidden="true"></i><span>About</span></a>
-            </li>
-            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                <a href="recipe-home-page.html" class="hvr-sweep-to-right"><i  aria-hidden="true"></i><span>Recipe</span></a>
-            </li>
-            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                <a href="shop-advice.html" class="hvr-sweep-to-right"><i  aria-hidden="true"></i><span>Shop/Advice</span></a>
-            </li>
-        </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">The Fusion Dragon</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item ui-menu-color-home">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item ui-menu-color-about">
+                    <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item ui-menu-color-recipe">
+                    <a class="nav-link" href="recipe-home-page.html">Recipes</a>
+                  </li>
+                  <li class="nav-item ui-menu-color-shop-advice">
+                    <a class="nav-link" href="shop-advice.html">Shop/Advice</a>
+                  </li>
+                  
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <h1>Fusion Dragon</h1>
     <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
