--- a/about.html
+++ b/about.html
@@ -11,31 +11,37 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand ui-page-title" href="index.html">The Fusion Dragon</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item ui-menu-color-home">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item ui-menu-color-about">
-                    <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item ui-menu-color-recipe">
-                    <a class="nav-link" href="recipe-home-page.html">Recipes</a>
-                  </li>
-                  <li class="nav-item ui-menu-color-shop-advice">
-                    <a class="nav-link" href="shop-advice.html">Shop/Advice</a>
-                  </li>
-                  
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img src="assets/images/Fusion Dragon Logo.jpg" alt="" class="fusion-logo"> Fusion Dragon</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Menu
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Recipe 1</a></li>
+                  <li><a class="dropdown-item" href="#">Recipe 1</a></li>
+                  <li><a class="dropdown-item" href="#">Recipe 1</a></li>
                 </ul>
-              </div>
-            </div>
-          </nav>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <h1>Fusion Dragon</h1>
     <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
