--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
       <div id="footer-details" class="row">
           <div class="col-sm-4">
               <h5 class="uppercase general-sub">About</h5>
-              <p class="inline-block">A Junior Software Developer currently learning the inns and outs of coding. </p>
+              <p class="inline-block">Placeholder text </p>
 
           </div>
           <div class="col-sm-4">
-              <h5 class="uppercase general-sub">Download</h5> 
+              <h5 class="uppercase general-sub">Placeholder text</h5> 
               <p class="inline-block">
-                  Need a printable version of my CV? Download it here.
+                Placeholder text
                   <a href="assets/cv/Lydia-cv.pdf" target="_blank" class="cv-pdf">
                   <i class="fa fa-download" aria-hidden="true"></i>
                   <span class="sr-only">Download Link.</span>
