--- a/about.html
+++ b/about.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Fusion Dragon</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+    type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Fusion Dragon</title>
 </head>
+
 <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="assets/images/Fusion Dragon Logo.jpg" alt="" class="fusion-logo"> Fusion Dragon</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="assets/images/Fusion Dragon Logo.jpg" alt="" class="fusion-logo">
+          Fusion Dragon</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="recipe-home-page.html">Recipes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Menu
                 </a>
@@ -37,13 +43,84 @@
                   <li><a class="dropdown-item" href="#">Recipe 1</a></li>
                   <li><a class="dropdown-item" href="#">Recipe 1</a></li>
                 </ul>
-              </li>
-            </ul>
-          </div>
+              </li> -->
+          </ul>
         </div>
-      </nav>
-    </header>
-    <h1>Fusion Dragon</h1>
-    <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
+      </div>
+    </nav>
+  </header>
+  <h1>Fusion Dragon</h1>
+  <p>This is the Fusion Dragon, a website for recipes of all kinds. Bloogy woogy woo.</p>
+
+  <footer class="container-fluid">
+    <div id="footer-details" class="row">
+      <div class="col-sm-4">
+        <h5 class="uppercase general-sub">About</h5>
+        <p class="inline-block">A Junior Software Developer currently learning the inns and outs of coding. </p>
+
+      </div>
+      <div class="col-sm-4">
+        <h5 class="uppercase general-sub">Download</h5>
+        <p class="inline-block">
+          Need a printable version of my CV? Download it here.
+          <a href="assets/cv/Lydia-cv.pdf" target="_blank" class="cv-pdf">
+            <i class="fa fa-download" aria-hidden="true"></i>
+            <span class="sr-only">Download Link.</span>
+          </a>
+        </p>
+
+      </div>
+      <div class="col-sm-4">
+        <h5 class="uppercase general-sub">Social</h5>
+        <ul class="list-inline social-links">
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <span class="sr-only">Twitter</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <span class="sr-only">Linkedin</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-pinterest" aria-hidden="true"></i>
+              <span class="sr-only">Pinterest</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="#">
+              <i class="fa fa-youtube" aria-hidden="true"></i>
+              <span class="sr-only">Youtube</span>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+
+  </footer>
 </body>
+
 </html>
