--- a/about.html
+++ b/about.html
@@ -39,5 +39,72 @@
     </header>
     <h1>Fusion Dragon</h1>
     <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
+
+    <footer class="container-fluid">
+      <div id="footer-details" class="row">
+          <div class="col-sm-4">
+              <h5 class="uppercase general-sub">About</h5>
+              <p class="inline-block">Placeholder text </p>
+
+          </div>
+          <div class="col-sm-4">
+              <h5 class="uppercase general-sub">Placeholder text</h5> 
+              <p class="inline-block">
+                Placeholder text
+                  
+              </p>
+
+          </div>
+          <div class="col-sm-4">
+              <h5 class="uppercase general-sub">Social</h5>
+              <ul class="list-inline social-links">
+                  <li class="list-inline-item">
+                      <a target="_blank" href="#">
+                          <i class="fa fa-facebook" aria-hidden="true"></i>
+                          <span class="sr-only">Facebook</span>
+                      </a>
+                  </li>
+
+                  <li class="list-inline-item">
+                      <a target="_blank" href="#">
+                          <i class="fa fa-twitter" aria-hidden="true"></i>
+                          <span class="sr-only">Twitter</span>
+                      </a>
+                  </li>
+
+                  <li class="list-inline-item">
+                      <a target="_blank" href="#">
+                          <i class="fa fa-linkedin" aria-hidden="true"></i>
+                          <span class="sr-only">Linkedin</span>
+                      </a>
+                  </li>
+
+                  <li class="list-inline-item">
+                      <a target="_blank" href="#">
+                          <i class="fa fa-pinterest" aria-hidden="true"></i>
+                          <span class="sr-only">Pinterest</span>
+                      </a>
+                  </li>
+
+                  <li class="list-inline-item">
+                      <a target="_blank" href="#">
+                          <i class="fa fa-instagram" aria-hidden="true"></i>
+                          <span class="sr-only">Instagram</span>
+                      </a>
+                  </li>
+
+                  <li class="list-inline-item">
+                      <a target="_blank" href="#">
+                          <i class="fa fa-youtube" aria-hidden="true"></i>
+                          <span class="sr-only">Youtube</span>
+                      </a>
+                  </li>
+              </ul>
+
+          </div>
+
+          </div>
+      
+  </footer>
 </body>
 </html>
