styled footer and header

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="assets/images/Fusion Dragon Logo.jpg" alt="" class="fusion-logo">
-          Fusion Dragon</a>
+                    Fusion Dragon</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
   <h1>Fusion Dragon</h1>
   <p>This is the Fusion Dragon, a website for recipes of all kinds. Bloogy woogy woo.</p>
 
-  <footer class="container-fluid">
+  <footer class="container-fluid" class="footer-color">
     <div id="footer-details" class="row">
       <div class="col-sm-4">
         <h5 class="uppercase general-sub">About</h5>
