--- a/about.html
+++ b/about.html
@@ -15,10 +15,11 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="assets/images/Fusion Dragon Logo.jpg" alt="" class="fusion-logo">
-                    Fusion Dragon</a>
+        <a class="navbar-brand" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
+            alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
+          <span id="logo-title">Fusion Dragon</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,16 +35,6 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Menu
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Recipe 1</a></li>
-                  <li><a class="dropdown-item" href="#">Recipe 1</a></li>
-                  <li><a class="dropdown-item" href="#">Recipe 1</a></li>
-                </ul>
-              </li> -->
           </ul>
         </div>
       </div>
@@ -52,7 +43,7 @@
   <h1>Fusion Dragon</h1>
   <p>This is the Fusion Dragon, a website for recipes of all kinds. Bloogy woogy woo.</p>
 
-  <footer class="container-fluid" class="footer-color">
+  <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
       <div class="col-sm-4">
         <h5 class="uppercase general-sub">About</h5>
@@ -121,6 +112,15 @@
     </div>
 
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
