Added images and text to the about page.

--- a/about.html
+++ b/about.html
@@ -39,5 +39,33 @@
     </header>
     <h1>Fusion Dragon</h1>
     <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
+
+    <div class="container">
+      <div class="box">
+        <h2>Tasty Food</h2>
+        <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean bland!.</p>
+        <img src="assets/images/lydia-cook.png" alt="Blonde haired chef">
+      </div>
+      
+      <div class="box">
+        <h2>Affordable Prices</h2>
+        <p>This is Alexis, if you want your socks blown off with flavour she is the chef for you. Come and try her latest creation!.</p>
+        <img src="assets/images/rhys-cook.jpg" alt="Dreadlocked chef">
+      </div>
+
+      <div class="box">
+        <h2>Stuff and things</h2>
+        <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean bland!.</p>
+        <img src="assets/images/brendan-chef.jpg" alt="Japanese chef">
+      </div>
+
+      <div class="box">
+        <h2>Bloogy woogy woo</h2>
+        <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean bland!.</p>
+        <img src="assets/images/simon-chef.webp" alt="Blonde chef">
+      </div>
+
+      
+    </div>
 </body>
 </html>
