overrode bootstrap padding and margin

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <section>
     <h1>Fusion Dragon</h1>
-    <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
+    <p>This is the Fusion Dragon, a website for recipes of all kinds. Bloogy woogy woo.</p>
 
   </section>
 
