--- a/recipe-page-1.html
+++ b/recipe-page-1.html
@@ -37,7 +37,24 @@
             </div>
           </nav>
     </header>
-    <h1>Fusion Dragon</h1>
-    <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
+    
+    <section class="container h-100 d-flex flex-column nopadding">
+      <div class="row flex-grow-1">
+        <div class="col-lg-4 nopadding">
+          <div id="chicken-noodle" class="nopadding"></div>
+        </div>
+        <div class="col-lg-8 nopadding">
+          
+        </div>
+      </div>
+      <div class="row flex-grow-1 nopadding">
+        <div class="col-lg-4">
+
+        </div>
+        <div class="col-lg-8 nopadding"></div>
+      </div>
+    </section>
+
+
 </body>
 </html>
