a few more overrides of bootstrap for recipes page

--- a/recipe-page-1.html
+++ b/recipe-page-1.html
@@ -43,8 +43,12 @@
         <div class="col-lg-4 nopadding">
           <div id="chicken-noodle" class="nopadding"></div>
         </div>
-        <div class="col-lg-8 nopadding">
-          
+        <div class="col-lg-8 nopadding flex-for-nut-bar">
+
+          <h1 class="recipe-title">Chicken and Noodle Stir Fry</h1>
+
+          <div class="container-for-nut-bar"></div>
+
         </div>
       </div>
       <div class="row flex-grow-1 nopadding">
