--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar sticky-top navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
             alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
