--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    type="text/css" />
+  <script src="https://kit.fontawesome.com/18e36ec3db.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
     type="text/css" />
   <link rel="stylesheet" href="assets/css/style.css">
@@ -20,22 +19,29 @@
         <a class="navbar-brand" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
             alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
           <span id="logo-title">Fusion Dragon</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="burger">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item d-none d-md-block">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-none d-md-block">
               <a class="nav-link" href="recipe-home-page.html">Recipes</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-none d-md-block">
               <a class="nav-link" href="about.html">About</a>
             </li>
+           
           </ul>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle d-block d-md-none" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+              <a href="index.html" class="dropdown-item">Home</a>
+              <a href="recipe-home-page.html" class="dropdown-item">Recipes</a>
+              <a href="about.html" class="dropdown-item">About</a>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
