some formatting of the recipes page complete although issues persist

--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -46,11 +46,28 @@
         <div class="col-lg-8 nopadding flex-for-nut-bar">
 
           <h1 class="recipe-title">Chicken and Noodle Stir Fry</h1>
-
-          <div class="container-for-nut-bar"></div>
-
+            
+          <div class="container-for-info-bar">
+              <div class="row">
+              <div class="col-lg-4 serves-prep">
+              <span><i class="fa-regular fa-clock"></i><p>Prep: 15min</p></span>
+              <p>Cook: 15min</p>
+              <span><i class="fa-solid fa-person"></i><p>Serves 4</p></span>
+              </div>
+            <div class="col-lg-8 nopadding">
+              <div class="row container-for-nut-bar nopadding">
+                <div class="col-lg nut-container nopadding"><p>Energy <br>478kcal <br>24%</p></div>
+                <div class="col-lg nut-container nopadding"><p>Fat <br>25g <br>35%</p></div>
+                <div class="col-lg nut-container nopadding"><p>Saturates <br>5g <br>25%</p></div>
+                <div class="col-lg nut-container nopadding"><p>Sugars <br>11g <br>12%</p></div>
+                <div class="col-lg nut-container nopadding"><p>Salt <br>2.2g <br>37%</p></div>
+            </div>
+          </div>
+          </div>
+          </div>
         </div>
       </div>
+      
       <div class="row flex-grow-1 nopadding">
         <div class="col-lg-4">
 
@@ -59,6 +76,6 @@
       </div>
     </section>
 
-
+    <script src="https://kit.fontawesome.com/afced6604b.js" crossorigin="anonymous"></script>
 </body>
 </html>
