--- a/index.html
+++ b/index.html
@@ -114,5 +114,6 @@
           </div>
       
   </footer>
+  <script src="https://kit.fontawesome.com/afced6604b.js" crossorigin="anonymous"></script>
 </body>
 </html>
