--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -54,13 +54,13 @@
               <p>Cook: 15min</p>
               <span><i class="fa-solid fa-person"></i><p>Serves 4</p></span>
               </div>
-            <div class="col-lg-8 nopadding">
+            <div class="col-lg-8 nopadding pushdown">
               <div class="row container-for-nut-bar nopadding">
-                <div class="col-lg nut-container nopadding"><p>Energy <br>478kcal <br>24%</p></div>
-                <div class="col-lg nut-container nopadding"><p>Fat <br>25g <br>35%</p></div>
-                <div class="col-lg nut-container nopadding"><p>Saturates <br>5g <br>25%</p></div>
-                <div class="col-lg nut-container nopadding"><p>Sugars <br>11g <br>12%</p></div>
-                <div class="col-lg nut-container nopadding"><p>Salt <br>2.2g <br>37%</p></div>
+                <div class="col-lg nut-container nopadding"><div class="box-nut"><p>Energy <br>478kcal <br>24%</p></div></div>
+                <div class="col-lg nut-container nopadding"><div class="box-nut"><p>Fat <br>25g <br>35%</p></div></div>
+                <div class="col-lg nut-container nopadding"><div class="box-nut"><p>Saturates <br>5g <br>25%</p></div></div>
+                <div class="col-lg nut-container nopadding"><div class="box-nut"><p>Sugars <br>11g <br>12%</p></div></div>
+                <div class="col-lg nut-container nopadding"><div class="box-nut"><p>Salt <br>2.2g <br>37%</p></div></div>
             </div>
           </div>
           </div>
@@ -70,9 +70,34 @@
       
       <div class="row flex-grow-1 nopadding">
         <div class="col-lg-4">
+          <h2 class="recipe-title-h2">Ingredients</h2>
+          <ul>
+            <li>2 nests dried egg noodles</li><hr>
+            <li>1 tbsp sesame oil</li><hr>
+            <li>3 skinless boneless chicken thighs, cut into strips</li><hr>
+            <li>3 tbsp soy sauce</li><hr>
+            <li>2 tbsp honey</li><hr>
+            <li>1 tbsp vegetable oil</li><hr>
+            <li>1 garlic clove, peeled and finely sliced</li><hr>
+            <li>3cm piece ginger, peeled and cut into matchsticks</li><hr>
+            <li>100g Tenderstem broccoli, halved and cut lengthways</li><hr>
+            <li>100g baby corn, thickly sliced diagonally</li><hr>
+            <li>75g chestnut mushrooms, sliced</li><hr>
+            <li>1 yellow pepper, deseeded and cut into strips</li><hr>
+            <li>50g raw cashew nuts, toasted</li><hr>
+            <li>150g pot fresh edamame beans</li><hr>
+          </ul>
 
         </div>
-        <div class="col-lg-8 nopadding"></div>
+        <div class="col-lg-8 nopadding">
+          <h2 class="recipe-title-h2">Method</h2>
+            <ol>
+              <li>Boil the noodles, following pack instructions, then drain and set aside.</li><hr>
+              <li>Meanwhile, heat the sesame oil in a wok or large frying pan over a high heat until very hot. Add the chicken and stir-fry for 6-7 mins until golden and crispy. Add the soy sauce and honey and heat for 30 secs until bubbling and the chicken is coated. Tip the contents of the pan into a bowl and set aside. Wipe out the pan with kitchen paper.</li><hr>
+              <li>Add the vegetable oil to the pan, then add the garlic and ginger and cook for 30 secs. Add the broccoli, baby corn, mushrooms and pepper, then stir-fry for 3-4 mins, continually tossing the mixture to help it cook evenly. Add the cashews and edamame beans and toss for 1 min.</li><hr>
+              <li>Return the chicken to the pan, stir to combine and serve over the noodles.</li><hr>
+            </ol>
+        </div>
       </div>
     </section>
 
