Adjusted the size of pictures and added margins to the next so it fits nicely.

--- a/about.html
+++ b/about.html
@@ -41,17 +41,17 @@
     </nav>
   </header>
   <h1>Fusion Dragon</h1>
-  <p>This is the Fusion Dragon, a websitye for recipes of all kinds. Bloogy woogy woo.</p>
+  <p>This is The Fusion Dragon, we pride ourselves on an environment that encourages creativity when it comes to flavour, texture and look of a dish. At the Fusion Dragon we pride ourselves on our diverse team of talented chefs who can bring bountiful dishes to your table by creating and sharing their recipes. </p>
 
   <div class="container">
-    <div class="box">
+    <div class="box" id="lydia-text">
       <h2>Tasty Food</h2>
       <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean
         bland!.</p>
       <img src="assets/images/lydia-cook.png" alt="Blonde haired chef">
     </div>
 
-    <div class="box">
+    <div class="box" id="alexis-text">
       <h2>Affordable Prices</h2>
       <p>This is Alexis, if you want your socks blown off with flavour she is the chef for you. Come and try her latest
         creation!.</p>
@@ -59,16 +59,14 @@
     </div>
 
     <div class="box">
-      <h2>Stuff and things</h2>
-      <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean
-        bland!.</p>
+      <h2>Interesting flavours</h2>
+      <p>This is Brendan, one of our fantastic chefs. He is always trying new recipes and trying to combine flavours from all over the globe.</p>
       <img src="assets/images/brendan-chef.jpg" alt="Japanese chef">
     </div>
 
     <div class="box">
-      <h2>Bloogy woogy woo</h2>
-      <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean
-        bland!.</p>
+      <h2>A party in your mouth</h2>
+      <p>This is Simon, one of our skilled chefs. Simon specialises in fusion dishes, he is always in the kitchen trying to find the next recipe.</p>
       <img src="assets/images/simon-chef.webp" alt="Blonde chef">
     </div>
   </div>
