Adding hero image and some adjustments to the about page.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
       </div>
     </nav>
   </header>
-=======
-
+<section>
+  <div class="hero-image col-12">
+  <img src="assets/images/hero-image-chinese-food.jpg" alt="Selection of chinese food">
+</div>
+</section>
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
       <div class="col-sm-4">
