--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <script src="https://kit.fontawesome.com/18e36ec3db.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Fusion Dragon</title>
@@ -38,7 +38,7 @@
           </nav>
     </header>
     
-    <section class="container h-md-100 d-flex flex-column nopadding">
+    <section class=" h-md-100 d-flex flex-column nopadding">
       <div class="row flex-grow-1">
         <div class="col-lg-4 col-12 nopadding">
           <div id="chicken-noodle" class="nopadding"></div>
