--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       </div>
     </nav>
   </header>
-=======
+<div class="hero-image">
+  <img src="assets/images/hero-image-chinese-food.jpg" alt="Selection of Chinese food">
+</div>
 
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
