fixed some issues

--- a/recipe-home-page.html
+++ b/recipe-home-page.html
@@ -41,7 +41,7 @@
     </nav>
   </header>
 
-  <div class="container mt-5">
+  <div class="mt-5">
     <h1 class="text-center">Chinese Recipes</h1>
     <div class="row">
       <div class="col-md-4">
