--- a/recipe-home-page.html
+++ b/recipe-home-page.html
@@ -47,23 +47,23 @@
     </nav>
   </header>
 
+  <h1 class="text-center mt-5"><strong>Chinese Recipies</strong></h1>
   <div class="mt-5">
-    <h1 class="text-center">Chinese Recipes</h1>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <h3 class="text-center">Sticky soy and ginger tofu with charred broccoli</h3>
         <img src="assets/images/Sticky soy and ginger tofu with charred broccoli recipe.jpg" alt="Recipe 1"
           class="img-fluid">
         <p class="text-center">It's hard to believe this dish is ready in just 20 minutes! Packed with sweet, sour and
           salty flavours, this Chinese-inspired stir-fry makes a perfect fast and fresh fakeaway.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <h3 class="text-center">Chicken noodle stir-fry recipe</h3>
         <img src="assets/images/Chicken Noodle Stir Fry Recipe.jpg" alt="Recipe 2" class="img-fluid">
         <p class="text-center">You can't go wrong with a classic chicken stir-fry recipe. This simple recipe combines
           sticky soy sauce glazed chicken thighs with plenty of veg, toasted cashews and noodles </p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <h3 class="text-center">Slow-cooker Asian pork roast recipe</h3>
         <img src="assets/images/Slow-cooker braised Chinese pork.jpg" alt="Recipe 3" class="img-fluid">
         <p class="text-center">A gorgeous slow-cooker recipe that is so simple, yet so tasty. Cokking ork this way means
