--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -50,27 +50,36 @@
           <div class="container-for-info-bar">
               <div class="row">
               <div class="col-lg-4 col-md-4 col-12 serves-prep">
-              <span><i class="fa-regular fa-clock"></i><p>Prep: 15min</p></span>
+              <span><i class="fa-regular fa-clock"></i></span><span> Prep: 15min</span>
               <p>Cook: 15min</p>
-              <span><i class="fa-solid fa-person"></i><p>Serves 4</p></span>
+              <span><i class="fa-solid fa-person"></i></span><span>    Serves 4</span>
               </div>
-            <div class="col-lg-8 col-md-8 col-12 nopadding pushdown">
+            <div class="col-lg-8 col-md-8 col-12 nopadding displaynone">
               <div class="row container-for-nut-bar nopadding">
-                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p>Energy <br>478kcal <br>24%</p></div></div>
-                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p>Fat <br>25g <br>35%</p></div></div>
-                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p>Saturates <br>5g <br>25%</p></div></div>
-                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p>Sugars <br>11g <br>12%</p></div></div>
-                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p>Salt <br>2.2g <br>37%</p></div></div>
+                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Energy <br>478kcal <br>24%</p></div></div>
+                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Fat <br>25g <br>35%</p></div></div>
+                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Saturates <br>5g <br>25%</p></div></div>
+                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Sugars <br>11g <br>12%</p></div></div>
+                <div class="col-lg col-md col-3 nut-container nopadding"><div class="box-nut"><p class="nopadding">Salt <br>2.2g <br>37%</p></div></div>
             </div>
           </div>
           </div>
           </div>
         </div>
       </div>
+
+      <div class="row sm-nut-container">
+                <div class="col nut-container nopadding"><div class="box-nut"><p>Energy <br>478kcal <br>24%</p></div></div>
+                <div class="col nut-container nopadding"><div class="box-nut"><p>Fat <br>25g <br>35%</p></div></div>
+                <div class="col nut-container nopadding"><div class="box-nut"><p>Saturates <br>5g <br>25%</p></div></div>
+                <div class="col nut-container nopadding"><div class="box-nut"><p>Sugars <br>11g <br>12%</p></div></div>
+                <div class="col nut-container nopadding"><div class="box-nut"><p>Salt <br>2.2g <br>37%</p></div></div>
+      </div>
+
       
       <div class="row flex-grow-1 nopadding">
         <div class="col-lg-4 col-12">
-          <h2 class="recipe-title-h2">Ingredients</h2>
+          <h2 class="recipe-title-h2 add-padding-top">Ingredients</h2>
           <ul>
             <li>2 nests dried egg noodles</li><hr>
             <li>1 tbsp sesame oil</li><hr>
