Added some css for the hero image.

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
       </div>
     </nav>
   </header>
+  <section id="hero">
 <div class="hero-image">
-  <img src="assets/images/hero-image-chinese-food.jpg" alt="Selection of Chinese food">
+  <img src="assets/images/hero-image-chinese-food.jpg" class="img-fluid" alt="Selection of Chinese food">
 </div>
+</section>
 
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
