Added more css for hero image and the our mission statement.

--- a/about.html
+++ b/about.html
@@ -54,26 +54,26 @@
       <h2>Tasty Food</h2>
       <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean
         bland!.</p>
-      <img src="assets/images/lydia-cook.png" alt="Blonde haired chef">
+      <img id="about-image" src="assets/images/lydia-cook.png" alt="Blonde haired chef">
     </div>
 
     <div class="box" id="alexis-text">
       <h2>Affordable Prices</h2>
       <p>This is Alexis, if you want your socks blown off with flavour she is the chef for you. Come and try her latest
         creation!.</p>
-      <img src="assets/images/rhys-cook.jpg" alt="Dreadlocked chef">
+      <img id="about-image" src="assets/images/rhys-cook.jpg" alt="Dreadlocked chef">
     </div>
 
     <div class="box">
       <h2>Interesting flavours</h2>
       <p>This is Brendan, one of our fantastic chefs. He is always trying new recipes and trying to combine flavours from all over the globe.</p>
-      <img src="assets/images/brendan-chef.jpg" alt="Japanese chef">
+      <img id="about-image" src="assets/images/brendan-chef.jpg" alt="Japanese chef">
     </div>
 
     <div class="box">
       <h2>A party in your mouth</h2>
       <p>This is Simon, one of our skilled chefs. Simon specialises in fusion dishes, he is always in the kitchen trying to find the next recipe.</p>
-      <img src="assets/images/simon-chef.webp" alt="Blonde chef">
+      <img id="about-image" src="assets/images/simon-chef.webp" alt="Blonde chef">
     </div>
   </div>
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
