--- a/index.html
+++ b/index.html
@@ -46,11 +46,24 @@
       </div>
     </nav>
   </header>
+  <section>
+    <div class="container-our-mission">
+    <h3>Our Mission</h3>
+    <p>Here at Fusion Dragon, we believe our mission is to bring you delightful flavour from all across the orient. Within these pages you can find recipes for tasty dishes that you don's need a professional kitchen to make. Each recipe has been chosen by our expert chefs for ease of making along with great falvours.</p>
+    
+  </div>
+  </section>
+  <main>
   <section id="hero">
 <div class="hero-image">
   <img src="assets/images/hero-image-chinese-food.jpg" class="img-fluid" alt="Selection of Chinese food">
 </div>
 </section>
+</main id="hero-image-main">
+
+
+
+
 
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
