--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 
 <body>
   <header>
-    <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+    <nav class="navbar sticky-top navbar-expand-lg">
+      <div class="col-12 container-fluid">
         <a class="navbar-brand inline-block" href="index.html"><img src="assets/images/Fusion Dragon Logo.jpg"
             alt="logo of a dragon behind a bowl of noodles" class="fusion-logo">
           <span class="inline-block" id="logo-title">Fusion Dragon</span></a>
         <div class="burger">
           <ul class="navbar-nav">
-            <li class="nav-item d-none d-md-block inline-block">
+            <li class="nav-item d-none d-lg-block inline-block">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item d-none d-md-block inline-block">
+            <li class="nav-item d-none d-lg-block inline-block">
               <a class="nav-link" href="recipe-home-page.html">Recipes</a>
             </li>
-            <li class="nav-item d-none d-md-block inline-block">
+            <li class="nav-item d-none d-lg-block inline-block">
               <a class="nav-link" href="about.html">About</a>
             </li>
            
           </ul>
           <div class="dropdown">
-            <button class="btn btn-secondary d-block d-md-none" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-secondary d-block d-lg-none" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa-solid fa-dragon"></i>
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <div class="dropdown-menu dropdown-menu-right" data-display="static" aria-labelledby="dropdownMenu2">
               <a href="index.html" class="dropdown-item">Home</a>
               <a href="recipe-home-page.html" class="dropdown-item">Recipes</a>
               <a href="about.html" class="dropdown-item">About</a>
