add images to about page, made it responsive and added bio to chefs

--- a/about.html
+++ b/about.html
@@ -30,10 +30,11 @@
             <li class="nav-item d-none d-lg-block inline-block">
               <a class="nav-link" href="about.html">About</a>
             </li>
-           
+
           </ul>
           <div class="dropdown">
-            <button class="btn btn-secondary d-block d-lg-none" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-secondary d-block d-lg-none" type="button" id="dropdownMenu2" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
               <i class="fa-solid fa-dragon"></i>
             </button>
             <div class="dropdown-menu dropdown-menu-right" data-display="static" aria-labelledby="dropdownMenu2">
@@ -46,39 +47,52 @@
       </div>
     </nav>
   </header>
-  <h1>Fusion Dragon</h1>
-  <p>This is The Fusion Dragon, we pride ourselves on an environment that encourages creativity when it comes to flavour, texture and look of a dish. At the Fusion Dragon we pride ourselves on our diverse team of talented chefs who can bring bountiful dishes to your table by creating and sharing their recipes. </p>
-
-  <div class="container">
-    <div class="box" id="lydia-text">
-      <h2>Tasty Food</h2>
-      <p>This is Lydia, one of our talented chefs. She might enjoy the simpler tastes but simple certainly does not mean
-        bland!.</p>
-      <img id="about-image" src="assets/images/lydia-cook.png" alt="Blonde haired chef">
-    </div>
-
-    <div class="box" id="alexis-text">
-      <h2>Affordable Prices</h2>
-      <p>This is Alexis, if you want your socks blown off with flavour she is the chef for you. Come and try her latest
-        creation!.</p>
-      <img id="about-image" src="assets/images/rhys-cook.jpg" alt="Dreadlocked chef">
-    </div>
-
-    <div class="box">
-      <h2>Interesting flavours</h2>
-      <p>This is Brendan, one of our fantastic chefs. He is always trying new recipes and trying to combine flavours from all over the globe.</p>
-      <img id="about-image" src="assets/images/brendan-chef.jpg" alt="Japanese chef">
-    </div>
-
-    <div class="box">
-      <h2>A party in your mouth</h2>
-      <p>This is Simon, one of our skilled chefs. Simon specialises in fusion dishes, he is always in the kitchen trying to find the next recipe.</p>
-      <img id="about-image" src="assets/images/simon-chef.webp" alt="Blonde chef">
+  <div class="row about-h1 text-center">
+    <div class="col-12">
+      <h1>Meet The Team</h1>
     </div>
   </div>
+
+  <div class="row about-h4 text-center">
+    <div class="col-12">
+      <h4>Our Recipes are created and perfected by a very talented team from all walks of life</h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <!-- lydia chef -->
+    <div class="col text-center">
+      <h2>Lydia</h2>
+      <img class="about-image" src="assets/images/lydia-cook.png" alt="Blonde haired chef">
+      <p>Lydia has trained in the martial-food-arts for over 40 years and brings these skills to the fusion market. Her fusion style keeps her looking young and spry </p>
+    </div>
+    <!-- Rhys Chef -->
+    <div class="col text-center">
+      <h2>Alexis</h2>
+      <img class="about-image" src="assets/images/rhys-cook.jpg" alt="The chef called">
+      <p>Alexis owns a chain of Authentic Fusion-Asia restaurants, she once battled a bear with only the fusion
+        ingredients she had at hand. It now comes and visits her every year for more food</p>
+    </div>
+    <!-- Brendon Chef -->
+    <div class="col text-center">
+      <h2>Brendon</h2>
+      <img class="about-image" src="assets/images/brendonchef.jpeg" alt="Brendan is a chef with a big moustache">
+      <p>Brendan has invented 230,000 Asian fusion recipes and is well known all around Asia for his genius-level intellect and understanding of flavour combinations. He has been known to surf whilst cooking</p>
+    </div>
+    <!-- Simon Chef -->
+    <div class="col text-center">
+      <h2>Simon</h2>
+
+      <img class="about-image" src="assets/images/simonchef.jpeg" alt="The Chef called Simon">
+      <p>Simon's muscles arent just for show, he first discovered fusion-asian-cooking when he pressed together 25
+        unique asian ingredients with his bare hands creating a best-selling dish in the Fusion-Asia market. He has made over
+        2 million dishes to-date using this unique cooking style</p>
+    </div>
+  </div>
+  <!-- Footer -->
   <footer class="footer container-fluid footer-color sticky-bottom" id="footer">
     <div id="footer-details" class="row">
-       <div class="col-sm-12">
+      <div class="col-sm-12">
         <h5 class="uppercase general-sub">Socials</h5>
         <ul class="list-inline social-links">
           <li class="list-inline-item">
@@ -129,6 +143,8 @@
     </div>
 
   </footer>
+
+  <!-- js scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
