fixed typos and curved about image radius

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
   <div class="row">
     <!-- lydia chef -->
-    <div class="col text-center">
+    <div class="col text-center about-box">
       <h2>Lydia</h2>
       <img class="about-image" src="assets/images/lydia-cook.png" alt="Blonde haired chef">
       <p>Lydia has trained in the martial-food-arts for over 40 years and brings these skills to the fusion market. Her fusion style keeps her looking young and spry </p>
@@ -70,21 +70,21 @@
     <div class="col text-center">
       <h2>Alexis</h2>
       <img class="about-image" src="assets/images/rhys-cook.jpg" alt="The chef called">
-      <p>Alexis owns a chain of Authentic Fusion-Asia restaurants, she once battled a bear with only the fusion
+      <p class="about-info">Alexis owns a chain of Authentic Fusion-Asia restaurants, she once battled a bear with only the fusion
         ingredients she had at hand. It now comes and visits her every year for more food</p>
     </div>
-    <!-- Brendon Chef -->
+    <!-- Brendan Chef -->
     <div class="col text-center">
-      <h2>Brendon</h2>
+      <h2>Brendan</h2>
       <img class="about-image" src="assets/images/brendonchef.jpeg" alt="Brendan is a chef with a big moustache">
-      <p>Brendan has invented 230,000 Asian fusion recipes and is well known all around Asia for his genius-level intellect and understanding of flavour combinations. He has been known to surf whilst cooking</p>
+      <p class="about-info">Brendan has invented 230,000 Asian fusion recipes and is well known all around Asia for his genius-level intellect and understanding of flavour combinations. He has been known to surf whilst cooking</p>
     </div>
     <!-- Simon Chef -->
-    <div class="col text-center">
+    <div class="col text-center about-bottom">
       <h2>Simon</h2>
 
       <img class="about-image" src="assets/images/simonchef.jpeg" alt="The Chef called Simon">
-      <p>Simon's muscles arent just for show, he first discovered fusion-asian-cooking when he pressed together 25
+      <p class="about-info">Simon's muscles arent just for show, he first discovered fusion-asian-cooking when he pressed together 25
         unique asian ingredients with his bare hands creating a best-selling dish in the Fusion-Asia market. He has made over
         2 million dishes to-date using this unique cooking style</p>
     </div>
