completed recipe pages although could be formatted better

--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -1,4 +1,4 @@
- class="nobullet"<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -86,7 +86,7 @@
       <div class="row flex-grow-1 nopadding">
         <div class="col-lg-4 col-12">
           <h2 class="recipe-title-h2 add-padding-top">Ingredients</h2>
-          <ul> class="listmargin"
+          <ul> 
             <li class="nobullet">2 nests dried egg noodles</li><hr>
             <li class="nobullet">1 tbsp sesame oil</li><hr>
             <li class="nobullet">3 skinless boneless chicken thighs, cut into strips</li><hr>
