--- a/recipe-home-page.html
+++ b/recipe-home-page.html
@@ -47,7 +47,7 @@
     </nav>
   </header>
 
-  >
+  
     <h1 class="text-center">Chinese Recipes</h1>
     <div class="row">
       <div class="col-md-4">
@@ -59,7 +59,7 @@
       </div>
       <div class="col-md-4">
         <h3 class="text-center recipe-titles">Chicken noodle stir-fry recipe</h3>
-        <img src="assets/images/Chicken Noodle Stir Fry Recipe.jpg" alt="Recipe 2" class="img-fluid">
+        <a href="chicken-noodle.html"><img src="assets/images/Chicken Noodle Stir Fry Recipe.jpg" alt="Recipe 2" class="img-fluid"></a>
         <p class="text-center">You can't go wrong with a classic chicken stir-fry recipe. This simple recipe combines
           sticky soy sauce glazed chicken thighs with plenty of veg, toasted cashews and noodles </p>
       </div>
