sorted out titles in recipe pages

--- a/chicken-noodle.html
+++ b/chicken-noodle.html
@@ -51,7 +51,7 @@
         </div>
         <div class="col-lg-8 col-12 nopadding flex-for-nut-bar">
           
-          <h1 class="recipe-title">Chicken and Noodle Stir Fry</h1>
+          <h1 class="recipe-title-chicken">Chicken and Noodle Stir Fry</h1>
         
           <div class="container-for-info-bar">
               <div class="row">
