--- a/pork-roast.html
+++ b/pork-roast.html
@@ -54,7 +54,7 @@
       </div>
       <div class="col-lg-8 col-12 nopadding flex-for-nut-bar">
         
-        <h1 class="recipe-title">Slow-cooker Asian pork roast recipe</h1>
+        <h1 class="recipe-title-pork">Slow-cooker Asian pork roast recipe</h1>
       
         <div class="container-for-info-bar">
             <div class="row">
